2017-02-16  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* INSTALL: Remove bison, flex, libpcap, libssh, libksba to the list
	of prerequisites since nasl is now  . Remove recommendations
	to have WMI and improved SNMP support. Remove prerequisites from the
	apt-install command. Leave only 'misc' and delete 'base' from the
	instruction to link the library statically.

	* CMakeLists.txt: Remove all related to libsnmp since it was used only for
	nasl module and it was moved to openvas-scanner.

2017-02-16  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'base' from Doxygen
	input directories.

2017-02-15  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Finally remove last remains of base library.

	* base/, base/CMakeLists.txt. base/README.txt, base/test-hosts.c:
	Removed. The test tool is now in gvm-libs.

	* CMakeLists.txt: Removed base module.

	* COPYING: Removed base module.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "nvticache" is now in gvm-libs/util.

	* base/nvticache.c, base/nvticache.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* COPYING: Remove module from this list.

	* misc/CMakeLists.txt: Drop openvase_base library
	which is not needed anymore.

	* misc/plugutils.c: Include gvm/util/nvticache.h instead
	of ../base/nvticache.h.

	* CMakeLists.txt: Do not configure and install the pc file for base
	library.

	* libopenvas_base.pc.in: Removed. This is not required anymore.

2017-02-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "kb" is now in gvm-libs/util.

	* base/kb_redis.c, base/kb.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* INSTALL: Remove requirement of hiredis.

	* COPYING: Remove module from this list.

	* base/nvticache.c: Include gvm/util/kb.h instead of kb.h.

	* misc/network.c, misc/plugutils.c, misc/plugutils.h,
	misc/www_funcs.c: Include gvm/util/kb.h instead of ../base/kb.h.
